--- a/Dilemma.Web/appsettings.json
+++ b/Dilemma.Web/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Path": {
-    "Images": "Images/"
+    "Images": "Images"
   },
   "Statistics": {
     "ExpirationHours": "1",
