Dilemma fixing, refactoring and data seeding

--- a/Dilemma.Web/appsettings.json
+++ b/Dilemma.Web/appsettings.json
@@ -12,7 +12,6 @@
   },
   "Statistics": {
     "ExpirationHours": "1",
-    "ExpirationMinutes": "0",
-    "ExpirationSeconds": "0"
+    "StepHours":  "1"
   }
 }
