--- a/Dilemma.Web/Dilemma.Web.csproj
+++ b/Dilemma.Web/Dilemma.Web.csproj
@@ -1,15 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>ddd76c99-39d8-488f-8272-c8586bd8df00</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dilemma.BL\Dilemma.BL.csproj" />
     <ProjectReference Include="..\Dilemma.Common\Dilemma.Common.csproj" />
     <ProjectReference Include="..\Dilemma.DAL\Dilemma.DAL.csproj" />
   </ItemGroup>
