Added cache and detailed expiration/step config settings

--- a/Dilemma.Web/appsettings.json
+++ b/Dilemma.Web/appsettings.json
@@ -12,6 +12,10 @@
   },
   "Statistics": {
     "ExpirationHours": "1",
-    "StepHours":  "1"
+    "ExpirationMinutes": "0",
+    "ExpirationSeconds": "0",
+    "StepHours": "1",
+    "StepMinutes": "0",
+    "StepSeconds": "0"
   }
 }
