Rewrited algorithm for statistics calculation

--- a/Dilemma.Web/appsettings.json
+++ b/Dilemma.Web/appsettings.json
@@ -16,6 +16,9 @@
     "ExpirationSeconds": "0",
     "StepHours": "1",
     "StepMinutes": "0",
-    "StepSeconds": "0"
+    "StepSeconds": "0",
+    "DeltaHours": "120",
+    "DeltaMinutes": "0",
+    "DeltaSeconds": "0"
   }
 }
